Oppdatert versjoner av maven-surefire-plugin og kotlin-maven-plugin